[package]
name = "axum-typed-websockets"
version = "0.2.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "axum::extract::ws with type safe messages"
edition = "2018"
homepage = "https://github.com/davidpdrsn/axum-typed-websockets"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-typed-websockets"

[features]
default = ["json"]
json = ["serde_json"]

[dependencies]
axum = { version = "0.3", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
serde = "1.0"
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
